<resources>
    <string name="app_name">FoodWheels</string>
    <string name="save_delivery_location">Save delivery location</string>
    <string name="address">Address</string>
    <string name="house_flat_no">House/Flat No.</string>
    <string name="landmark">Landmark</string>
    <string name="save_as">SAVE AS</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="save_and_proceed">SAVE and PROCEED</string>
    <string name="manual">MANUAL</string>
    <string name="permission_denied_message">This permission is required to run the application, please provide it otherwise you may face difficulty in using the application.</string>
    <string name="source_location">Your location</string>
    <string name="identify_location">Identifying location...</string>

</resources>
