<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_above="@id/tv_save_address" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/white"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_marginTop="-8dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_save_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/save_delivery_location"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:text="@string/manual"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:textStyle="bold"
                android:alpha="0.3"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_save_address"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address"
                    android:textSize="15sp"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_address"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_house"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/house_flat_no"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_house"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/landmark"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_save_as"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_landmark"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:text="@string/save_as"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/ll_save_as"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_save_as"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/home" />

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/home"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/iv_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/work" />

                <TextView
                    android:id="@+id/tv_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/work"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/iv_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/tv_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/other"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_save_as"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:background="@color/colorAccent"
                android:text="@string/save_and_proceed"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
